--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/graphql": "^13.0.2",
     "@nestjs/mongoose": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "mongoose": "^8.9.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
